<resources>
    <string name="app_name" translatable="false">AniLib</string>
    <string name="app_subtitle">By the power of AniList</string>
    <string name="app_description">Your to be favourite place to manage, track, browse your Anime and Manga and much more.</string>
    <string name="anilib_site">AniLib Site</string>
    <string name="visit_site_desc">Visit AniLib to know more.</string>
    <string name="discover">Discover</string>
    <string name="season">Season</string>
    <string name="dynamically_apply_theme">Dynamically apply theme.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="its_empty">Feeling empty</string>
    <string name="close">Close</string>
    <string name="ep_d_s">Ep: %1$s · D: %2$s min</string>
    <string name="chap_s">Chap: %1$s · Vol: %2$s</string>
    <string name="manga">Manga</string>
    <string name="please_log_in">Please log in.</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="sign_in">Sign In</string>
    <string name="theme">Theme</string>
    <string name="notification">Notification</string>
    <string name="notification_setting_sub">Control what you see in notification.(Login required)</string>
    <string name="sign_out">Sign Out</string>
    <string name="feed">Feed</string>
    <string name="activity">Activity</string>
    <string name="authenticating">Authenticating</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="filter">Filter</string>
    <string name="users">Users</string>
    <string name="user_detail_fetch_failed">Failed to fetch user detail.</string>
    <string name="save">Save</string>
    <string name="status">Status</string>
    <string name="score">Score</string>
    <string name="invalid_input_type">Invalid input type.</string>
    <string name="current">Current</string>
    <string name="watching">Watching</string>
    <string name="planning">Planning</string>
    <string name="completed">Completed</string>
    <string name="dropped">Dropped</string>
    <string name="paused">Paused</string>
    <string name="rewatching">Rewatching</string>
    <string name="episode_progress">Episode Progress</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">Finish Date</string>
    <string name="total_rewatch">Total Rewatches</string>
    <string name="total_reread">Total Rereads</string>
    <string name="private_">Private</string>
    <string name="notes">Notes</string>
    <string name="failed_to_save">Failed to save.</string>
    <string name="failed_to_toggle">Failed to toggle.</string>
    <string name="failed_to_delete">Failed to remove.</string>
    <string name="please_wait">Please wait.</string>
    <string name="volume_progress">Volume Progress</string>
    <string name="manga_progress">Manga Progress</string>
    <string name="make_private">Make Private</string>
    <string name="overview">Overview</string>
    <string name="character">Character</string>
    <string name="stats">Stats</string>
    <string name="staff">Staff</string>
    <string name="review">Review</string>
    <string name="watch">Watch</string>
    <string name="open_list_editor">Open list editor</string>
    <string name="delete">Delete</string>
    <string name="toggle_fav">Toggle Favourite</string>
    <string name="operation_failed">Operation failed.</string>
    <string name="type">Type</string>
    <string name="source">Source</string>
    <string name="episodes">Episodes</string>
    <string name="duration">Duration</string>
    <string name="format">Format</string>
    <string name="min_s">%1$s min</string>
    <string name="chapters">Chapters</string>
    <string name="volumes">Volume</string>
    <string name="start_s_end_s">Start: %1$s &#160; · &#160; End: %2$s</string>
    <string name="japanese_title">Japanese</string>
    <string name="english_title">English</string>
    <string name="romaji_title">Romaji</string>
    <string name="description">Description</string>
    <string name="episode_format_s">E: %1$s · %2$s</string>
    <string name="episode_duration_s">%1$s Ep · %2$s min</string>
    <string name="chapters_volumes_s">%1$s Chap · %2$s Vol</string>
    <string name="too_many_request">Too many request</string>
    <string name="recommendations">Recommendation</string>
    <string name="chapter_format_s">C: %1$s · %2$s</string>
    <string name="source_seasonyear_s">%1$s · %2$s</string>
    <string name="str_dot_str" translatable="false">%1$s · %2$s</string>
    <string name="relations">Relations</string>
    <string name="genre">Genre</string>
    <string name="tags">Tags</string>
    <string name="studios">Studios</string>
    <string name="producers">Producers</string>
    <string name="hashtag">Hashtag</string>
    <string name="average_score">Average Score</string>
    <string name="popularity">Popularity</string>
    <string name="favourites">Favourites</string>
    <string name="day">Days</string>
    <string name="hour">Hour</string>
    <string name="min">Min</string>
    <string name="sec">Sec</string>
    <string name="ep_s">Ep %1$d</string>
    <string name="no_app_found_to_open">No app found to handle url</string>
    <string name="recent_act_per_day">Recent Activity Per Day</string>
    <string name="rankings">Rankings</string>
    <string name="status_distribution">Status Distribution</string>
    <string name="score_distribution">Score Distribution</string>
    <string name="native_name">Native Name</string>
    <string name="alternative_name">Alternative Name</string>
    <string name="about">About</string>
    <string name="about_anilib">About AniLib</string>
    <string name="share">Share</string>
    <string name="invalid">Invalid</string>
    <string name="media">Media</string>
    <string name="voice_role">Voice Roles</string>
    <string name="staff_role">Staff Roles</string>
    <string name="media_format_year_s">%1$s · %2$s</string>
    <string name="language">Language</string>
    <string name="studio">Studio</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="streaming_on">Streaming On</string>
    <string name="country">Country</string>
    <string name="year">Year</string>
    <string name="year_disabled">Year (Disabled)</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="unselect_all">Unselect All</string>
    <string name="suggestion">Suggestion</string>
    <string name="recommendation_filter">Recommendation Filter</string>
    <string name="s_slash_s">%1$s/%2$s</string>
    <string name="s_slash_s_brackets">%1$s/%2$s (%3$s)</string>
    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>
    <string name="none">None</string>
    <string name="repeating">Repeating</string>
    <string name="spoiler_alert">Spoiler Alert</string>
    <string name="failed_to_load">Failed to load</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="blocked">Blocked</string>
    <string name="s_following">%1$sFollowing</string>
    <string name="s_followers">%1$sFollowers</string>
    <string name="total_anime">Total Anime</string>
    <string name="days_watched">Days Watched</string>
    <string name="mean_score">Mean Score</string>
    <string name="total_manga">Total Manga</string>
    <string name="chapters_read">Chapters Read</string>
    <string name="saved_to_gallary">Saved to gallary</string>
    <string name="anime">Anime</string>
    <string name="gif">Gif</string>
    <string name="anime_stats">Anime Stats</string>
    <string name="manga_stats">Manga Stats</string>
    <string name="voice_actors">Voice Actors</string>
    <string name="episodes_watched">Episodes Watched</string>
    <string name="days_planned">Days Planned</string>
    <string name="add">Add</string>
    <string name="select_date">Select Date</string>
    <string name="write_review">Write review (Min:2200)</string>
    <string name="refresh_interval">Refresh Interval</string>
    <string name="notifications">Notifications</string>
    <string name="when_someone_follows_me">When someone follows me</string>
    <string name="receive_message_notif">When i receive a message</string>
    <string name="mention_replay_notif">When I am @ mentioned in an activity or activity reply</string>
    <string name="activity_like_notif">When someone likes my activity</string>
    <string name="likes_activity_reply_notif">When someone likes my activity reply</string>
    <string name="forum_reply_notif">When someone replies to my forum comment</string>
    <string name="forum_mention_notif">When I am @ mentioned in a forum comment</string>
    <string name="forum_coment_liked_notif">When someone likes my forum comment</string>
    <string name="reply_to_subscribed_forum_notif">When someone replies to a forum thread I\'m subscribed to</string>
    <string name="forum_liked_notif">When someone likes my forum thread</string>
    <string name="media_title">Media Title</string>
    <string name="notification_interval_desc">Checks if there is any notification after specified time interval.</string>
    <string name="preferred_media_title">Select preferred media title(AniList setting will override this after login)</string>
    <string name="cover_image_quality">Cover Image Quality</string>
    <string name="preferred_image_quality_desc">Select your preferred image quality</string>
    <string name="application_language">Application Language</string>
    <string name="preferred_application_language">Select preferred application language</string>
    <string name="change_display_mode">Change display mode</string>
    <string name="discord">Discord</string>
    <string name="start_nav_page_desc">Configure startup page.</string>
    <string name="startup_page">Startup Page Order</string>
    <string name="translate">Translate</string>
    <string name="home_screen_order">Home Screen Order</string>
    <string name="home_screen_order_desc">Change order of home screen.(Changes will be applied in next app launch)</string>
    <string name="display_card_in_home_desc">Don\'t show any cards in home screen for description</string>
    <string name="display_home_screen_cards">Remove description cards in home screens</string>
    <string name="activity_subscription">Activity Subscription</string>
    <string name="automatically_subscribe_me_to_activity_i_create">Automatically subscribe me to activity I create</string>
    <string name="automatically_subscribe_me_to_activity_i_reply_to">Automatically subscribe me to activity I reply to</string>
    <string name="weekly">Weekly</string>
    <string name="copy_link">Copy Link</string>
    <string name="theme_app_summary">Style of the app.</string>
    <string name="theme_app">App theme</string>
    <string name="theme_app_day">Day theme</string>
    <string name="theme_app_day_summary">Style of the app during the day.</string>
    <string name="theme_app_day_night_desc">This will only work when the auto theme is applied.</string>
    <string name="theme_app_night_summary">Style of the app at night.</string>
    <string name="theme_app_night">Night theme</string>
    <string name="theme_background_aware_desc">Adjust colors according to the background to provide best visibility.</string>
    <string name="theme_color_accent_summary">Color used by the secondary elements.</string>
    <string name="theme_color_accent">Accent color</string>
    <string name="theme_app_desc">Select auto to use the day and night themes.</string>
    <string name="reload">Reload</string>
    <string name="exclude">Exclude</string>
    <string name="do_not_exclude">Don\'t exclude</string>
</resources>