<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/overviewNav"
        android:icon="@drawable/ic_overview"
        android:title="@string/overview" />
    <item
        android:id="@+id/watchNav"
        android:icon="@drawable/ic_watch"
        android:title="@string/watch" />

    <item
        android:id="@+id/characterNav"
        android:icon="@drawable/ic_character"
        android:title="@string/character" />

    <item
        android:id="@+id/staffNav"
        android:icon="@drawable/ic_staff"
        android:title="@string/staff" />

    <item
        android:id="@+id/reviewNav"
        android:icon="@drawable/ic_review"
        android:title="@string/review" />


    <item
        android:id="@+id/statsNav"
        android:icon="@drawable/ic_chart"
        android:title="@string/stats" />

</menu>