<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addToListMenu"
        android:icon="@drawable/ic_add"
        android:title="@string/open_list_editor"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/writeReviewMenu"
        android:icon="@drawable/ic_review"
        android:title="@string/write_review"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/toggleFavMenu"
        android:icon="@drawable/ic_not_favourite"
        android:title="@string/toggle_fav"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/media_share_menu"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/media_copy_menu"
        android:icon="@drawable/ic_copy"
        android:title="@string/copy_link"
        app:showAsAction="ifRoom" />

</menu>