<?xml version="1.0" encoding="utf-8"?>
<com.pranavpandey.android.dynamic.support.widget.DynamicNestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.pranavpandey.android.dynamic.support.widget.DynamicLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <include
            android:id="@+id/notification_setting_progress_bar"
            layout="@layout/horizontal_progress_bar_layout" />

        <com.pranavpandey.android.dynamic.support.widget.DynamicCardView style="@style/Widget.DynamicApp.Card">

            <com.pranavpandey.android.dynamic.support.setting.DynamicSpinnerPreference
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ads_description="@string/notification_interval_desc"
                app:ads_entries="@array/notification_refresh_interval_entries"
                app:ads_icon="@drawable/ic_planning"
                app:ads_key="notification_refresh_interval"
                app:ads_title="@string/refresh_interval"
                app:ads_value="0"
                app:ads_values="@array/notification_refresh_interval_value" />
        </com.pranavpandey.android.dynamic.support.widget.DynamicCardView>

        <com.revolgenx.anilib.ui.view.header.CustomDynamicHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ads_fillSpace="true"
            app:ads_title="@string/activity_subscription"
            app:titleTextSize="14sp" />

        <com.pranavpandey.android.dynamic.support.widget.DynamicCheckBox
            android:id="@+id/subscribe_activity_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automatically_subscribe_me_to_activity_i_create" />

        <com.pranavpandey.android.dynamic.support.widget.DynamicCheckBox
            android:id="@+id/subscribe_activity_reply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automatically_subscribe_me_to_activity_i_reply_to" />


        <com.revolgenx.anilib.ui.view.header.CustomDynamicHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ads_fillSpace="true"
            app:ads_title="@string/notifications"
            app:titleTextSize="14sp" />

        <com.pranavpandey.android.dynamic.support.widget.DynamicCheckBox
            android:id="@+id/follows_me_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/when_someone_follows_me" />

        <com.pranavpandey.android.dynamic.support.widget.DynamicCheckBox
            android:id="@+id/receive_message_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receive_message_notif" />

        <com.pranavpandey.android.dynamic.support.widget.DynamicCheckBox
            android:id="@+id/mentioned_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mention_replay_notif" />

        <com.pranavpandey.android.dynamic.support.widget.DynamicCheckBox
            android:id="@+id/like_activity_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_like_notif" />

        <com.pranavpandey.android.dynamic.support.widget.DynamicCheckBox
            android:id="@+id/like_activity_reply_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/likes_activity_reply_notif" />

        <com.pranavpandey.android.dynamic.support.widget.DynamicCheckBox
            android:id="@+id/reply_forum_comment_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forum_reply_notif" />

        <com.pranavpandey.android.dynamic.support.widget.DynamicCheckBox
            android:id="@+id/mention_forum_comment_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forum_mention_notif" />

        <com.pranavpandey.android.dynamic.support.widget.DynamicCheckBox
            android:id="@+id/like_forum_comment_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forum_coment_liked_notif" />

        <com.pranavpandey.android.dynamic.support.widget.DynamicCheckBox
            android:id="@+id/reply_forum_subscribed_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reply_to_subscribed_forum_notif" />

        <com.pranavpandey.android.dynamic.support.widget.DynamicCheckBox
            android:id="@+id/like_forum_thread_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forum_liked_notif" />


    </com.pranavpandey.android.dynamic.support.widget.DynamicLinearLayout>

</com.pranavpandey.android.dynamic.support.widget.DynamicNestedScrollView>
