<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/list_search_menu"
        android:title="@string/search"
        app:showAsAction="always"
        android:icon="@drawable/ic_search"
        />

    <item
        android:id="@+id/list_notification_menu"
        android:title="@string/notification"
        app:showAsAction="always"
        android:icon="@drawable/ic_notification_outline"/>

    <item
        android:id="@+id/list_display_mode_menu"
        android:title="@string/change_display_mode"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/list_filter_menu"
        android:title="@string/filter"
        app:showAsAction="never"
        />

</menu>