<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/listSearchMenu"
        android:icon="@drawable/ads_ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/listNotificationMenu"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notification"
        app:showAsAction="always" />

    <item
        android:id="@+id/listDisplayModeMenu"
        android:title="@string/change_display_mode"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_eye"/>

    <item
        android:id="@+id/listFilterMenu"
        android:icon="@drawable/ic_button_setting"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />


</menu>
